@@ -254,7 +254,7 @@
     "thy_deps"
     "translations"
     "try"
-    "try_methods"
+    "try0"
     "txt"
     "txt_raw"
     "typ"
@@ -413,7 +413,7 @@
     "thm_deps"
     "thy_deps"
     "try"
-    "try_methods"
+    "try0"
     "typ"
     "unused_thms"
     "value"
